[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Fonts/no_virus/No Virus.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Source/Button/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Source/Menu/HMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Graphics/Textures/old_paper.png" type="Texture" id=4]
[ext_resource path="res://Source/Gameplay/HUD/StartGameMenu.gd" type="Script" id=5]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 800, 500 )
modulate_color = Color( 0.517647, 0.517647, 0.517647, 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )
LineEdit/colors/clear_button_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 1, 1, 1, 1 )
LineEdit/colors/cursor_color = Color( 0.94, 0.94, 0.94, 1 )
LineEdit/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0.88, 0.88, 0.88, 0.5 )
LineEdit/colors/selection_color = Color( 0.49, 0.49, 0.49, 1 )
LineEdit/constants/minimum_spaces = 12
LineEdit/fonts/font = null
LineEdit/icons/clear = null
LineEdit/styles/focus = SubResource( 1 )
LineEdit/styles/normal = SubResource( 1 )
LineEdit/styles/read_only = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 36
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[node name="JoinGameMenu" type="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -360.0
margin_top = -187.5
margin_right = 360.0
margin_bottom = 187.5
theme = SubResource( 3 )
texture = ExtResource( 4 )
expand = true
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 260, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginTop" type="ColorRect" parent="Info"]
margin_right = 720.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Info"]
margin_top = 9.0
margin_right = 720.0
margin_bottom = 58.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
text = "Join a Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginMid1" type="ColorRect" parent="Info"]
visible = false
margin_top = 62.0
margin_right = 480.0
margin_bottom = 67.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="Info" type="Label" parent="Info"]
visible = false
margin_top = 62.0
margin_right = 480.0
margin_bottom = 99.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "Number of players?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayersRange" type="SpinBox" parent="Info"]
visible = false
margin_top = 62.0
margin_right = 480.0
margin_bottom = 111.0
rect_min_size = Vector2( 0, 49 )
min_value = 2.0
max_value = 6.0
value = 2.0
align = 1

[node name="MarginMid2" type="ColorRect" parent="Info"]
margin_top = 62.0
margin_right = 720.0
margin_bottom = 67.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="Info"]
margin_top = 71.0
margin_right = 720.0
margin_bottom = 293.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Info/ScrollContainer"]
margin_right = 720.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginMid3" type="ColorRect" parent="Info"]
margin_top = 297.0
margin_right = 720.0
margin_bottom = 302.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[node name="HMenu2" parent="Info" instance=ExtResource( 3 )]
margin_top = 306.0
margin_right = 720.0
margin_bottom = 366.0

[node name="MarginLeft" type="Label" parent="Info/HMenu2"]
margin_top = 11.0
margin_bottom = 48.0

[node name="Cancel" parent="Info/HMenu2" instance=ExtResource( 2 )]
margin_left = 20.0
margin_right = 680.0
custom_fonts/font = SubResource( 6 )
text = "Cancel"
flat = true

[node name="MarginMid" type="Label" parent="Info/HMenu2"]
margin_left = 700.0
margin_top = 11.0
margin_right = 700.0
margin_bottom = 48.0

[node name="Join" parent="Info/HMenu2" instance=ExtResource( 2 )]
visible = false
margin_left = 380.0
margin_right = 700.0
custom_fonts/font = SubResource( 6 )
text = "Join"
flat = true

[node name="MarginRight" type="Label" parent="Info/HMenu2"]
margin_left = 720.0
margin_top = 11.0
margin_right = 720.0
margin_bottom = 48.0

[node name="MarginBottom" type="ColorRect" parent="Info"]
margin_top = 370.0
margin_right = 720.0
margin_bottom = 375.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0, 0, 0, 1 )

[connection signal="pressed" from="Info/HMenu2/Cancel" to="." method="cancel"]
[connection signal="pressed" from="Info/HMenu2/Join" to="." method="start_game"]
